# parallel-bgs

./: .clang-format  .gitmodules  CMakeLists.txt
include/: BGS.h  Filtros.h  MemHandler.h  utils.h
kernel/: BGS.cu  Filtros.cu  MemHandler.cu  gaussian_blur.cu  rgba_to_greyscale.cu
source/: BackgroundSubtraction - Serial.cpp  main.cpp
